edited some routers
